# ChromaTerm

./: .chromaterm.rc  .chromaterm.yml  .chromatermrc  .gitignore  .test.sh  .test_chromatermrc  .travis.yml  COPYING  CREDITS  INSTALL  LICENSE  README.md  chromatermrc.alt  ct  ct.1  mkdocs.yml  readme.md  setup.py
.github/: CODEOWNERS  README.md  junos-show-interface.txt  readme.md
.github/ISSUE_TEMPLATE/: Bug_report.md  bug.yml  bug_api.md  bug_script.md  question.yml
.github/workflows/: ci.yml  codeql-analysis.yml  lint.yml  publish.yml
chromaterm/: __init__.py  __main__.py  cli.py  colors.py  config.py  default_config.py  misc.py  pcre.py  test___init__.py  test_config.py  test_misc.py
chromaterm/platform/: unix.py  windows.py
chromaterm/tests/: __init__.py  conftest.py  test___init__.py  test__main__.py  test_cli.py  test_pcre.py
contrib/rules/: cisco  cisco.yml  fortinet.yml  generic-networking  generic-networking.yml  juniper  juniper.yml  networking
docs/: command-line-script.md  custom.css  index.md  release-notes.md  requirements.txt
docs/api/: color.md  config.md  introduction.md  rule.md
mods/: ct.mods
src/: Makefile  Makefile.in  action.c  alias.c  class.c  commands.c  config.c  config.h  config.h.in  config.status  configure  configure.ac  configure.in  ct  cursor.c  data.c  debug.c  defs.h  event.c  files.c  forkpty.c  function.c  gag.c  help.c  highlight.c  input.c  io.c  legacy.c  line.c  list.c  log.c  macro.c  main.c  math.c  memory.c  menu.c  misc.c  nest.c  net.c  parse.c  (+13 more)
src/test/: .test.sh  .test_chromatermrc
tests/: test___init__.py  test__main__.py  test_cli.py  test_default_config.py  test_pcre.py
tests/platform/: test_unix.py  test_windows.py
