## This program is protected under the GNU GPL (See COPYING)

AM_INIT_AUTOMAKE
AC_INIT
AC_CONFIG_SRCDIR([defs.h])
AC_CONFIG_HEADERS([config.h])

AC_SUBST(MYLIB)
AC_SUBST(mybindir)

if [ test $bindir != "\${exec_prefix}/bin" ]
then
	mybindir="$bindir"
else
	mybindir="."
fi

if [ test $libdir != "\${exec_prefix}/lib" ]
then
	MYLIB="-L$libdir"
else
	MYLIB=""
fi

AC_CHECK_LIB(util, forkpty)
AC_CHECK_LIB(pcre, pcre_compile,,
	[AC_MSG_ERROR([pcre runtime library not working, is it AND the corresponding development (header) file installed and linked])])

AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for header files.
AC_CHECK_HEADERS([ctype.h errno.h pthread.h signal.h stdarg.h stdio.h stdlib.h string.h sys/ioctl.h sys/stat.h sys/time.h unistd.h util.h wordexp.h])
AC_CHECK_HEADERS([pcre.h],,[AC_MSG_ERROR([pcre header file not found, is the development part present])])

# Checks for library functions.
AC_CHECK_FUNCS([memmove memset select strchr strcasecmp strncasecmp strstr forkpty])

AC_CHECK_FILES([/dev/ptmx])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT
